review last week

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -71,7 +71,7 @@ tags:
 - week32 🔴《宗教情感》10??10 Pray 101110 这周有两件突发情况，所以无法执行正常的作息。一，沐沐半夜发烧到 39度，二，周六考驾照，突击复习。
 - week33 ✔️ 读经 1110111 诗篇，罗马书，圣洁 Pray 1110111 （这周看到圣经就特别烦，不想读经祷告）（硬着头皮读了好多）
 - week34 《宗教情感》 0111211 Pray 0001111
-- week35 《宗教情感》1111 Pray 1111
+- week35 《宗教情感》1111111 Pray 1111110
 - week36
 - week37
 - week38
@@ -131,7 +131,7 @@ tags:
 - week32 ✔️ 跑步 1000011 
 - week33 ✔️ 跑步 100001 这周每次都是全家人一起跑步，滨江大道两次。
 - week34 ✔️ 0000011 上周六去小蓝家打羽毛球，膝盖疼了4天。这周没怎么跑步。周六滑轮滑一次，周日跑步一次。
-- week35 🔴 0000 上周六晚上和沐沐学习轮滑，摔了一觉，颈椎完全废掉了，这周无法跑步。看来中年人要尽量选择安全的运动方式。
+- week35 🔴 0000000 上周六晚上和沐沐学习轮滑，摔了一觉，颈椎完全废掉了，这周无法跑步。看来中年人要尽量选择安全的运动方式。
 - week36 
 - week37
 - week38
@@ -238,7 +238,7 @@ tags:
 
 - June. ✔️ 2020-07-02 把莫干山的照片打印出来寄回去了。
 - July. 🔴
-- Aug.
+- Aug. 🔴 打印机坏了
 - Sept.
 - Oct.
 - Nov.
@@ -249,6 +249,7 @@ tags:
 有没有什么办法可以让全家人的英文水平都提高上去？（出国旅游除外）  
 一， 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min   
 二， 英语的暑期夏令营  
+三，[增补] 在家里说英文？说什么内容呢？
 
 - week29-31 7月份参加 Jill 的暑期夏令营 ✔️
 - week34 学习叽里呱啦, youtube kids ✔️
@@ -277,7 +278,7 @@ tags:
 
 ### 5.探索: 邀请沐沐的好朋友来家里做客
 
-- week35 这周六刚好要帮小组照顾小孩，葡萄和颜言来我家。
+- week35 ✔️ 这周六刚好要帮小组照顾小孩，葡萄和颜言来我家。
 
 ### 6.探索：教沐沐识字
 
@@ -297,7 +298,7 @@ tags:
 - week32 ✔️ 沐沐开始了暑假生活，每天早晨起床后学习1个小时汉字
 - week33 ✔️ 洪恩识字后面字越来越难，经常忘字，混字，自信心变差。新字学习暂停一个月(至2020-09-11)，巩固过去学过的字。
 - week34 ✔️ 继续巩固复习错字和难字
-- week35  继续巩固复习错字和难字，现在做测试，有一半的字还是会出错，整个九月份不要学新字了，继续复习 （2020.8.10 -2020.9.30）。
+- week35 ✔️ 继续巩固复习错字和难字，现在做测试，有一半的字还是会出错，整个九月份不要学新字了，继续复习 （2020.8.10 -2020.9.30）。
 - week36 
 - week37
 - week38
@@ -327,8 +328,8 @@ tags:
 - week32 ✔️ 沐沐自己在学，我不知道进度。
 - week33 ✔️ 沐沐自己在学，我不知道进度
 - week34 ✔️ 沐沐自己在学，我不知道进度
-- week35 从相邻数开始，后面的章节越来越难，估计进度会变慢。
-- week36 
+- week35 ✔️ 学完相邻数！后面的章节越来越难，估计进度会变慢。
+- week36 学习单数/双数。
 - week37
 - week38
 - week39
@@ -362,7 +363,7 @@ tags:
 - week32 no progress
 - week33 ✔️ 沐沐平日饭后收拾餐具，周日早晨给爸妈买豆浆，周日买西瓜，中午分享西瓜。
 - week34 ✔️ 沐沐时收拾碗筷，周日给爸妈买早餐
-- week35 
+- week35 ✔️ 周日和我一起给全家人煎鸡蛋
 - week36 
 - week37
 - week38
@@ -388,6 +389,11 @@ tags:
 - week26 周四-周六：关关/吴琼/若郎/向文/刘小坤/吕小荣 去莫干山旅游。
 
 ### 10. ~~探索: 教沐沐打字 (他不感兴趣)~~
+
+### 11 其他
+
+- week35 尝试使用沙漏 ⏳ 培养沐沐的时间概念，在规定的时间内起床/穿衣服。
+- 
 
 
 ---
@@ -430,7 +436,7 @@ tags:
 - week32 🔴 team meeting
 - week33 🔴 一点进度都没有
 - week34 ✔️ Talk with Ben(customer success team)
-- week35 Talk with Customer (hosted by Vincent)
+- week35 ✔️ Talk with Customer (hosted by Vincent)
 - week36 
 - week37
 - week38
@@ -492,7 +498,7 @@ tags:
 - week32 Employee initial value
 - week33 deprecate form in employee information
 - week34 deprecate form in employee information
-- week35 ADP V2
+- week35 ADP V2 / 花了一上午写招聘帖
 - week36 
 - week37
 - week38
@@ -545,8 +551,8 @@ tags:
 - week32 ✔️ Udemy Section 17: Databases in AWS
 - week33 ✔️ Udemy Section 18: CloudWatch, CloudTrail and Config
 - week34 ✔️ Udemy Section 20: KMS, Secrets manager, Parameter Store, CloudHSM
-- week35 Udemy Section 21: VPC - CIDR 做程序员7年了，我居然连 IP 地址/子网掩码都不懂，羞愧。
-- week36 
+- week35 ✔️ Udemy Section 21: VPC - CIDR 做程序员7年了，我居然连 IP 地址/子网掩码都不懂，羞愧。
+- week36 CIDR / IP address / Mask
 - week37
 - week38
 - week39
@@ -596,7 +602,7 @@ tags:
 - week32 🔴 no progress
 - week33 🔴 no progress
 - week34 🔴 no progress
-- week35 
+- week35 🔴 no progress
 - week36 
 - week37
 - week38
@@ -638,8 +644,10 @@ tags:
 
 ### 4. [增补？] 6:00 AM 起床
 
-- week35 1111
-- week36 
+争取1周有5天是早起的。
+
+- week35 ✔️ 1111101 （周五小组聚会，回家太晚，所以周六肯定没法早起）
+- week36 0 （周日晚上去阿桂家了，回家又和向文有祷告会，所以周一起晚了）
 - week37
 - week38
 - week39
@@ -712,6 +720,9 @@ tags:
 - Flash Card
 	- [发现一个很棒的闪卡在医学领域的落地 HLT](https://builtbyhlt.com/)
 
+- 用 python 写一个微信机器人，自动处理教会的微信通知和广播
+
+
 ---
 
 ## 教会服侍
@@ -735,9 +746,9 @@ tags:
 - 2020-06-18 ✔️ 钱岩姐妹来我家吃晚饭，让我帮忙升级电脑，装软件，磁盘扩容。
 - 2020-07-08 ✔️ Jean 来我家探访。第一次深入聊天，居然有聊不完的话题。原来我想走的路，她都走过了。真希望能再聊一次。
 - 2020-07-31 ✔️ 周五小组查经在我家，招待小蓝/晓晓/向文/黄田一起吃晚饭。
-- 2020-08-06 ✔️ 周五小组查经在我家，招待向文/小梅/黄田一起吃晚饭。他们觉得阿姨的准备的晚饭非常好吃。
-- 2020-08-14 ✔️ 周五小组查经在我家，招待向文/小梅/黄田/小蓝/晓晓/若郎
-- 2020-08-29 小梅/坤叔/吕小荣一起带娃：葡萄，核桃，板栗，沐沐，Daniel
+- 2020-08-06 ✔️ 周五小组查经在我家，招待向文/小梅/黄田晚饭。他们觉得阿姨的准备的晚饭非常好吃。
+- 2020-08-14 ✔️ 周五小组查经在我家，招待向文/小梅/黄田/小蓝/晓晓/若郎晚饭
+- 2020-08-29 ✔️ 小梅/吕小荣/冯阿姨一起带娃：颜言，葡萄，沐沐
 - Aug.
 - Sept.
 - Oct.
@@ -756,7 +767,10 @@ tags:
 - May. 🔴 failed due to laziness
 - June. 🔴 failed due to laziness
 - July. ✔️ 2020-07-20 / 2020-07-22 去施浩的办公室蹭了两天网，好吃好喝，猪大肠套餐真好吃。yeah! 迈出了本年度的第一步。
-- Aug.
+- Aug. ✔️ 2020-08-30 去阿桂家串门。家里有两个孩子真是忙碌啊。等鸿毅大一点，可以邀请阿桂把娃托管在我们家一天，休息一下。我的收获：
+	- 上海 40% 上不了高中，初中毕业后直接进入中专，且不允许复读。
+	- 一年级的英文/语文这么难。
+	- 要让沐沐坚持每天学习，日拱一卒，不要把全部的压力都集中在一个时间段，太累了。
 - Sept.
 - Oct.
 - Nov.
@@ -776,7 +790,7 @@ tags:
 	- 2020-06-06 和杨阳随便聊天
 	- 2020-06-1? 和少灵闲聊学术不端的问题
 - July. 🔴 failed
-- Aug.
+- Aug. 🔴 failed
 - Sept.
 - Oct.
 - Nov.
@@ -794,7 +808,7 @@ tags:
 
 3. 如果朋友生小孩，送他们花王尿布和《子女心，父母情》
 	- 送 Paul 和盈盈
-	- 韬哥（8月底）
+	- 韬哥（8月底）（WIP）
 	- 送小娟姐姐和姐夫 《子女心，父母情》(WIP)
 
 4. 其他
@@ -809,7 +823,7 @@ tags:
 已经设定好日历了，到时候按计划讨论。
 
 - ✔️ 2020-07-10: 2020年小组计划，第一次沟通
-- 2020-09-18: 第三季度沟通
+- 2020-09-18: 第三季度沟通 (WIP)
 - 2020-12-25: 第四季度沟通
 
 
@@ -818,10 +832,30 @@ tags:
 - ✔️ 2020-08-02 小组祷告会
 - ✔️ 2020-08-09 小组祷告会
 - ✔️ 2020-08-16 小组祷告会
+- ✔️ 2020-08-23 小组祷告会
 
 ### 7. 长期和一个年轻人（向文）保持连接。
 
-若可以，提供帮助，或获得帮助。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。
+彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。
+
+- week35 ✔️ 
+- week36 
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
 
 
 ### 8.在教会和小组内的其他杂七杂八的事情。
@@ -831,7 +865,7 @@ tags:
 - week5 因为疫情，无法聚会。推广使用 Zoom 来主持周日敬拜。
 - 写了一份计划书 "主动关心，彼此委身“，Nancy/Severn/李帅/小梅报名了。
 - 建立了很多微信兴趣小组，让彼此有个交集。(delegate 出去，自己并不擅长）
-- 鼓励坤叔把读经打卡活动扩展到整个教会层面。加入坤叔的这个活动后，我居然每天都在读经（以前一周最多5次），比以前增加了2天。彼此鼓励让我增长了 40% 的动力。
+- 鼓励坤叔把读经打卡活动扩展到整个教会层面。加入坤叔的这个活动后，我每天都在读经（以前一周最多5次），比以前增加了2天。彼此鼓励让我增长了 40% 的动力。
 
 ### 9. 自己不擅长的事情，找其他人互补。
 
