--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -72,8 +72,8 @@ tags:
 - week33 ✔️ 读经 1110111 诗篇，罗马书，圣洁 Pray 1110111 （这周看到圣经就特别烦，不想读经祷告）（硬着头皮读了好多）
 - week34 《宗教情感》 0111211 Pray 0001111
 - week35 《宗教情感》1111111 Pray 1111110
-- week36
-- week37
+- week36 《宗教情感》1111100 Pray 1111100
+- week37 《宗教情感》1111 Pray 1111
 - week38
 - week39
 - week40
@@ -96,6 +96,11 @@ tags:
 ## Health
 
 每周2次有氧运动（跑步或游泳皆可）。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。若健身房开业，加一次力量训练。
+
+[增补？] 早睡早起(22:30-6:00)
+
+[增补？] 每天上午/下午各站立办公1小时
+
 
 - week1 🔴 failed 游泳+1，不过似乎找到自由泳换气的诀窍了
 - week2 🔴 failed 游泳+1，力量训练+1
@@ -132,9 +137,9 @@ tags:
 - week33 ✔️ 跑步 100001 这周每次都是全家人一起跑步，滨江大道两次。
 - week34 ✔️ 0000011 上周六去小蓝家打羽毛球，膝盖疼了4天。这周没怎么跑步。周六滑轮滑一次，周日跑步一次。
 - week35 🔴 0000000 上周六晚上和沐沐学习轮滑，摔了一觉，颈椎完全废掉了，这周无法跑步。看来中年人要尽量选择安全的运动方式。
-- week36 
-- week37
-- week38
+- week36 🔴 就跑了一次
+- week37 锻炼: R0R0 ｜  早睡早起: 101 ｜  站立办公2小时: 1111 | 颈椎推拿: 00001
+- week38 
 - week39
 - week40 
 - week41 
@@ -150,6 +155,12 @@ tags:
 - week51 
 - week52 
 
+简写代表的含义
+
+R: running
+S: swimming
+1: 做了
+0: 没做
 
 ---
 
@@ -178,13 +189,13 @@ tags:
 - week31 🔴 no progress
 - week32 ✔️ 周六科目四考试 \| 拿到驾照, yeah！
 
-![](/media/files/2020/2020-08-08_15-15-02.jpg)
+![](https://mednoter.com/media/files/2020/2020-08-08_15-15-02.jpg)
 
 
 ### 2.保持财务健康
 
-- 今年经济不好，尽快把债务还清
-	- 欠哥哥5万
+- 把买房的债务还清
+	- 还清哥哥5万
 	- ✔️ 还清妹妹7万
 - 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
 
@@ -199,7 +210,7 @@ tags:
 ### 3.每个季度回济南看望爷爷奶奶和爸爸妈妈
 
 - Quarter 1 ✔️
-- Quarter 2 🔴 回家之后会影响随申码，暂时不敢回家
+- Quarter 2 🔴 回老家会影响随申码，沐沐就无法上学了，暂时不敢回家
 - Quarter 3
 - Quarter 4
 
@@ -216,8 +227,8 @@ tags:
 - week33 🔴 忘记了
 - week34 ✔️
 - week35 ✔️ 和爸妈爷爷奶奶聊天，得知爷爷最近脾气不好。
-- week36 
-- week37
+- week36 ✔️ 和爸妈爷爷奶奶聊天。
+- week37 ✔️ 爸爸最近迷上了打篮球，给他买了双球鞋，买了个水杯。
 - week38
 - week39
 - week40 
@@ -238,7 +249,7 @@ tags:
 
 - June. ✔️ 2020-07-02 把莫干山的照片打印出来寄回去了。
 - July. 🔴
-- Aug. 🔴 打印机坏了
+- Aug. ✔️
 - Sept.
 - Oct.
 - Nov.
@@ -253,9 +264,9 @@ tags:
 
 - week29-31 7月份参加 Jill 的暑期夏令营 ✔️
 - week34 学习叽里呱啦, youtube kids ✔️
-- week35 学习叽里呱啦, youtube kids，沐沐对叽里呱啦没那么反感了
-- week36 
-- week37
+- week35 学习叽里呱啦, youtube kids，沐沐对叽里呱啦没那么反感了 ✔️
+- week36 学习叽里呱啦 ✔️
+- week37 学习叽里呱啦 
 - week38
 - week39
 - week40 
@@ -299,8 +310,8 @@ tags:
 - week33 ✔️ 洪恩识字后面字越来越难，经常忘字，混字，自信心变差。新字学习暂停一个月(至2020-09-11)，巩固过去学过的字。
 - week34 ✔️ 继续巩固复习错字和难字
 - week35 ✔️ 继续巩固复习错字和难字，现在做测试，有一半的字还是会出错，整个九月份不要学新字了，继续复习 （2020.8.10 -2020.9.30）。
-- week36 
-- week37
+- week36 ✔️ 每天早晨起床后花半小时复习错字和难字。现在复习时错字控制在2个以内了。
+- week37 学习拥/抱/抓
 - week38
 - week39
 - week40 
@@ -329,8 +340,8 @@ tags:
 - week33 ✔️ 沐沐自己在学，我不知道进度
 - week34 ✔️ 沐沐自己在学，我不知道进度
 - week35 ✔️ 学完相邻数！后面的章节越来越难，估计进度会变慢。
-- week36 学习单数/双数。
-- week37
+- week36 ✔️ 学习单数/双数，复习相邻数。
+- week37 分类计数 / 5以内拆解
 - week38
 - week39
 - week40 
@@ -364,7 +375,28 @@ tags:
 - week33 ✔️ 沐沐平日饭后收拾餐具，周日早晨给爸妈买豆浆，周日买西瓜，中午分享西瓜。
 - week34 ✔️ 沐沐时收拾碗筷，周日给爸妈买早餐
 - week35 ✔️ 周日和我一起给全家人煎鸡蛋
-- week36 
+- week36 🔴 这周我很烦，谁都不想服务，更别提教沐沐服务别人。
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+### [增补?] 教沐沐锻炼一下表达能力
+
+沐沐在学校太安静了，想办法锻炼一下他的表达，话多一点。
+
 - week37
 - week38
 - week39
@@ -384,6 +416,8 @@ tags:
 
 
 
+
+
 ### 9. [增补？] 每半年带全家人出去旅游一次
 
 - week26 周四-周六：关关/吴琼/若郎/向文/刘小坤/吕小荣 去莫干山旅游。
@@ -393,7 +427,7 @@ tags:
 ### 11 其他
 
 - week35 尝试使用沙漏 ⏳ 培养沐沐的时间概念，在规定的时间内起床/穿衣服。
-- 
+- week36 沙漏效果非常明显，沐沐起床非常迅速了。
 
 
 ---
@@ -437,7 +471,7 @@ tags:
 - week33 🔴 一点进度都没有
 - week34 ✔️ Talk with Ben(customer success team)
 - week35 ✔️ Talk with Customer (hosted by Vincent)
-- week36 
+- week36 🔴 一点进度都没有
 - week37
 - week38
 - week39
@@ -499,8 +533,8 @@ tags:
 - week33 deprecate form in employee information
 - week34 deprecate form in employee information
 - week35 ADP V2 / 花了一上午写招聘帖
-- week36 
-- week37
+- week36 把 CircleCI 测试时间从25分钟降到6分钟，解决了一个非常棘手的 flaky test。
+- week37 Read the document of E-Verify
 - week38
 - week39
 - week40 
@@ -552,8 +586,8 @@ tags:
 - week33 ✔️ Udemy Section 18: CloudWatch, CloudTrail and Config
 - week34 ✔️ Udemy Section 20: KMS, Secrets manager, Parameter Store, CloudHSM
 - week35 ✔️ Udemy Section 21: VPC - CIDR 做程序员7年了，我居然连 IP 地址/子网掩码都不懂，羞愧。
-- week36 CIDR / IP address / Mask
-- week37
+- week36 ✔️ IP address / Mask / Network ID / Host ID / Subnetting
+- week37 ✔️ CIDR / VLSM / FLSM
 - week38
 - week39
 - week40 
@@ -603,7 +637,7 @@ tags:
 - week33 🔴 no progress
 - week34 🔴 no progress
 - week35 🔴 no progress
-- week36 
+- week36 🔴 no progress
 - week37
 - week38
 - week39
@@ -642,33 +676,11 @@ tags:
 
 (2020-08-27 update: 放弃这个烂目标，增补一个简单的目标—— 早起！六点起床读经祷告！）
 
-### 4. [增补？] 6:00 AM 起床
-
-争取1周有5天是早起的。
-
-- week35 ✔️ 1111101 （周五小组聚会，回家太晚，所以周六肯定没法早起）
-- week36 0 （周日晚上去阿桂家了，回家又和向文有祷告会，所以周一起晚了）
-- week37
-- week38
-- week39
-- week40 
-- week41 
-- week42 
-- week43 
-- week44 
-- week45 
-- week46 
-- week47
-- week48
-- week49
-- week50 
-- week51 
-- week52 
-
 
 ### 5.业余爱好探索
 
 - 组织 Ruby 上海地区的线下聚会
+	- week37 组织一次，并且申请了 Jetbrains 的兑换码作为奖品。
 
 - 参与到开源项目 TiDB 数据库中
 	- 学习 TiDB 的开源文化和组织形式
@@ -749,6 +761,7 @@ tags:
 - 2020-08-06 ✔️ 周五小组查经在我家，招待向文/小梅/黄田晚饭。他们觉得阿姨的准备的晚饭非常好吃。
 - 2020-08-14 ✔️ 周五小组查经在我家，招待向文/小梅/黄田/小蓝/晓晓/若郎晚饭
 - 2020-08-29 ✔️ 小梅/吕小荣/冯阿姨一起带娃：颜言，葡萄，沐沐
+- 2020-09-11 ✔️ 周五小组查经在我家，招待向文/黄田/小蓝/晓晓/若郎晚饭
 - Aug.
 - Sept.
 - Oct.
@@ -768,9 +781,9 @@ tags:
 - June. 🔴 failed due to laziness
 - July. ✔️ 2020-07-20 / 2020-07-22 去施浩的办公室蹭了两天网，好吃好喝，猪大肠套餐真好吃。yeah! 迈出了本年度的第一步。
 - Aug. ✔️ 2020-08-30 去阿桂家串门。家里有两个孩子真是忙碌啊。等鸿毅大一点，可以邀请阿桂把娃托管在我们家一天，休息一下。我的收获：
-	- 上海 40% 上不了高中，初中毕业后直接进入中专，且不允许复读。
-	- 一年级的英文/语文这么难。
-	- 要让沐沐坚持每天学习，日拱一卒，不要把全部的压力都集中在一个时间段，太累了。
+	- 上海 40% 学生上不了高中，初中毕业后直接进入中专，且不允许复读。
+	- 一年级的英文/语文非常难。
+	- 要让沐沐坚持每天学习，日拱一卒，不要把全部的压力都集中在人生的一个阶段，太累了。
 - Sept.
 - Oct.
 - Nov.
@@ -802,9 +815,11 @@ tags:
 	- Python 大妈 ✔️
 	- 荣安驾校的程教练 ✔️
 
-2. 如果朋友结婚，送他们《爱的五种语言》。
-	- Ben@workstream ✔️
+2. 《爱的五种语言》。
+	- Ben@Workstream ✔️
 	- 陈哲和王黎 ✔️
+	- Snow@Workstream ✔️
+	- Demo@Workstream ✔️
 
 3. 如果朋友生小孩，送他们花王尿布和《子女心，父母情》
 	- 送 Paul 和盈盈
@@ -815,7 +830,7 @@ tags:
 	- 送若郎《成功，目标与动机》《欲罢不能》
 	- 送 Derek 量化交易的书籍。不过我不赞成普通人去做量化交易，警惕乌尔冈湖效应。✔️
 	- 送琳琳姑姑圣经 ✔️
-	- 送阿姨的儿子《欲罢不能》✔️
+	- 送冯阿姨的儿子《欲罢不能》✔️
 
 
 ### 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
@@ -839,7 +854,7 @@ tags:
 彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。
 
 - week35 ✔️ 
-- week36 
+- week36 🔴 这周很烦，什么人也不想见，就想自己独处一会。
 - week37
 - week38
 - week39
