--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -138,7 +138,7 @@ tags:
 - week34 ✔️ 0000011 上周六去小蓝家打羽毛球，膝盖疼了4天。这周没怎么跑步。周六滑轮滑一次，周日跑步一次。
 - week35 🔴 0000000 上周六晚上和沐沐学习轮滑，摔了一觉，颈椎完全废掉了，这周无法跑步。看来中年人要尽量选择安全的运动方式。
 - week36 🔴 就跑了一次
-- week37 锻炼: R0R0 ｜  早睡早起: 101 ｜  站立办公2小时: 1111 | 颈椎推拿: 00001
+- week37 锻炼: R0R0 \｜  早睡早起: 101 \｜  站立办公2小时: 1111 \| 颈椎推拿: 00001
 - week38 
 - week39
 - week40 
