update weekly review

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -8,6 +8,7 @@ tags:
   -
 ---
 
+
 2020年的计划，分了五个板块按照优先级从高到低排序：信仰，健康，家庭，职场，教会。
 
 
@@ -70,11 +71,11 @@ tags:
 - week31 ✔️ 《宗教情感》1111011 Pray 1111101 
 - week32 🔴《宗教情感》10??10 Pray 101110 这周有两件突发情况，所以无法执行正常的作息。一，沐沐半夜发烧到 39度，二，周六考驾照，突击复习。
 - week33 ✔️ 读经 1110111 诗篇，罗马书，圣洁 Pray 1110111 （这周看到圣经就特别烦，不想读经祷告）（硬着头皮读了好多）
-- week34 《宗教情感》 0111211 Pray 0001111
-- week35 《宗教情感》1111111 Pray 1111110
-- week36 《宗教情感》1111100 Pray 1111100
-- week37 《宗教情感》1111 Pray 1111
-- week38
+- week34 ✔️《宗教情感》0111211 Pray 0001111
+- week35 ✔️《宗教情感》1111111 Pray 1111110
+- week36 ✔️《宗教情感》1111100 Pray 1111100
+- week37 ✔️《宗教情感》1111101 Pray 1111101
+- week38 《宗教情感》 Pray
 - week39
 - week40
 - week41
@@ -138,8 +139,8 @@ tags:
 - week34 ✔️ 0000011 上周六去小蓝家打羽毛球，膝盖疼了4天。这周没怎么跑步。周六滑轮滑一次，周日跑步一次。
 - week35 🔴 0000000 上周六晚上和沐沐学习轮滑，摔了一觉，颈椎完全废掉了，这周无法跑步。看来中年人要尽量选择安全的运动方式。
 - week36 🔴 就跑了一次
-- week37 锻炼: R0R0 \|  早睡早起: 101 \|  站立办公2小时: 1111 \| 颈椎推拿: 00001
-- week38 
+- week37 ✔️ 锻炼: R0R000B \|  早睡早起: 1011111 \|  站立办公2小时: 1111111 \| 颈椎推拿: 0000100
+- week38 锻炼: \|  早睡早起: \|  站立办公2小时: \| 颈椎推拿: 
 - week39
 - week40 
 - week41 
@@ -159,6 +160,7 @@ tags:
 
 R: running
 S: swimming
+B: badminton
 1: 做了
 0: 没做
 
@@ -266,8 +268,8 @@ S: swimming
 - week34 学习叽里呱啦, youtube kids ✔️
 - week35 学习叽里呱啦, youtube kids，沐沐对叽里呱啦没那么反感了 ✔️
 - week36 学习叽里呱啦 ✔️
-- week37 学习叽里呱啦 
-- week38
+- week37 学习叽里呱啦（刘小坤的音标的发音有点问题，要不还是我来教英文吧，重新分工一下） ✔️
+- week38 /w/ /r/ 
 - week39
 - week40 
 - week41 
@@ -311,7 +313,7 @@ S: swimming
 - week34 ✔️ 继续巩固复习错字和难字
 - week35 ✔️ 继续巩固复习错字和难字，现在做测试，有一半的字还是会出错，整个九月份不要学新字了，继续复习 （2020.8.10 -2020.9.30）。
 - week36 ✔️ 每天早晨起床后花半小时复习错字和难字。现在复习时错字控制在2个以内了。
-- week37 学习拥/抱/抓
+- week37 ✔️学习拥/抱/抓/扔
 - week38
 - week39
 - week40 
@@ -341,7 +343,7 @@ S: swimming
 - week34 ✔️ 沐沐自己在学，我不知道进度
 - week35 ✔️ 学完相邻数！后面的章节越来越难，估计进度会变慢。
 - week36 ✔️ 学习单数/双数，复习相邻数。
-- week37 分类计数 / 5以内拆解
+- week37 ✔️ 分类计数 / 5以内拆解 / 5以内减法
 - week38
 - week39
 - week40 
@@ -376,7 +378,7 @@ S: swimming
 - week34 ✔️ 沐沐时收拾碗筷，周日给爸妈买早餐
 - week35 ✔️ 周日和我一起给全家人煎鸡蛋
 - week36 🔴 这周我很烦，谁都不想服务，更别提教沐沐服务别人。
-- week37
+- week37 ✔️ 周日和沐沐一起买早饭，煎鸡蛋给刘小坤。
 - week38
 - week39
 - week40 
@@ -395,10 +397,10 @@ S: swimming
 
 ### [增补?] 教沐沐锻炼一下表达能力
 
-沐沐在学校太安静了，想办法锻炼一下他的表达，话多一点。
+背景：老师告诉我沐沐在学校太安静了，想办法锻炼一下他的表达，话多一点。
 
-- week37
-- week38
+- week37 ✔️ 让沐沐问一下自己的好朋友喜欢吃什么食物，讨厌什么食物 \| 邀请他们来家里做客 \| （没问出结果来，下周让沐沐接着问）
+- week38 故意让朋友叫错沐沐的名字，让沐沐纠正别人
 - week39
 - week40 
 - week41 
@@ -472,7 +474,7 @@ S: swimming
 - week34 ✔️ Talk with Ben(customer success team)
 - week35 ✔️ Talk with Customer (hosted by Vincent)
 - week36 🔴 一点进度都没有
-- week37
+- week37 🔴 一点进度都没有
 - week38
 - week39
 - week40 
@@ -587,8 +589,8 @@ S: swimming
 - week34 ✔️ Udemy Section 20: KMS, Secrets manager, Parameter Store, CloudHSM
 - week35 ✔️ Udemy Section 21: VPC - CIDR 做程序员7年了，我居然连 IP 地址/子网掩码都不懂，羞愧。
 - week36 ✔️ IP address / Mask / Network ID / Host ID / Subnetting
-- week37 ✔️ CIDR / VLSM / FLSM
-- week38
+- week37 ✔️ Udemy Section 21: CIDR / VLSM / FLSM / NAT / Private IP ranges
+- week38 Routing Table
 - week39
 - week40 
 - week41 
@@ -784,7 +786,7 @@ S: swimming
 	- 上海 40% 学生上不了高中，初中毕业后直接进入中专，且不允许复读。
 	- 一年级的英文/语文非常难。
 	- 要让沐沐坚持每天学习，日拱一卒，不要把全部的压力都集中在人生的一个阶段，太累了。
-- Sept.
+- Sept. ✔️ 2020-09-12 去坤叔家玩，看完一下他妈妈。
 - Oct.
 - Nov.
 - Dec.
@@ -815,14 +817,14 @@ S: swimming
 	- Python 大妈 ✔️
 	- 荣安驾校的程教练 ✔️
 
-2. 《爱的五种语言》。
+2. 如果朋友准备结婚，刚结婚，或夫妻吵架，送他们《爱的五种语言》
 	- Ben@Workstream ✔️
 	- 陈哲和王黎 ✔️
 	- Snow@Workstream ✔️
 	- Demo@Workstream ✔️
 
-3. 如果朋友生小孩，送他们花王尿布和《子女心，父母情》
-	- 送 Paul 和盈盈
+3. 如果朋友生小孩
+	- 送 Paul 和盈盈花王尿布，《子女心，父母情》，耳温枪
 	- 韬哥（8月底）（WIP）
 	- 送小娟姐姐和姐夫 《子女心，父母情》(WIP)
 
@@ -915,7 +917,7 @@ S: swimming
 
 已经工作八年了，有六年都做了年度计划。大部分都是按照计划推进，但依然无法掌控人生的轨迹。
 
-一是，年轻时没有智慧，做事情容易急功近利，随大流，忽视家庭，忽视健康。等到稍微懂成熟一点，就会发现当初设定的一部分目标都是虚空。
+一是，年轻时没有智慧，做事情容易急功近利，随大流，忽视家庭，忽视健康。等到稍微懂成熟一点，就会发现不值。
 
 二是，人真的太渺小了，哪扇门开启，哪扇门关闭，往往大环境决定的。
 
