--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -75,7 +75,7 @@ tags:
 - week35 ✔️《宗教情感》1111111 Pray 1111110
 - week36 ✔️《宗教情感》1111100 Pray 1111100
 - week37 ✔️《宗教情感》1111101 Pray 1111101
-- week38 《宗教情感》 Pray
+- week38 《宗教情感》10 Pray 11
 - week39
 - week40
 - week41
