--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -75,7 +75,7 @@ tags:
 - week35 ✔️《宗教情感》1111111 Pray 1111110
 - week36 ✔️《宗教情感》1111100 Pray 1111100
 - week37 ✔️《宗教情感》1111101 Pray 1111101
-- week38 《宗教情感》10 Pray 11
+- week38 ✔️《宗教情感》第三遍读完了 1111101  Pray 1111101 周五和刘小坤谈育儿到深夜，周六实在无法早起床了，所以没有读经和祷告。
 - week39
 - week40
 - week41
@@ -140,8 +140,8 @@ tags:
 - week35 🔴 0000000 上周六晚上和沐沐学习轮滑，摔了一觉，颈椎完全废掉了，这周无法跑步。看来中年人要尽量选择安全的运动方式。
 - week36 🔴 就跑了一次
 - week37 ✔️ 锻炼: R0R000B \|  早睡早起: 1011111 \|  站立办公2小时: 1111111 \| 颈椎推拿: 0000100
-- week38 锻炼: \|  早睡早起: \|  站立办公2小时: \| 颈椎推拿: 
-- week39
+- week38 ✔️ 锻炼: R00000R \|  早睡早起: 1011101 \|  站立办公2小时: 111111 \| 颈椎推拿: 0100000
+- week39 锻炼: \|  早睡早起: \|  站立办公2小时: \| 颈椎推拿:
 - week40 
 - week41 
 - week42 
@@ -190,6 +190,7 @@ B: badminton
 - week30 ✔️ 周二下午练科目三 \| 周五请假全天模拟科目三 \| 周日科目三过了！
 - week31 🔴 no progress
 - week32 ✔️ 周六科目四考试 \| 拿到驾照, yeah！
+- week38 ✔️ 周六从吴琼昆山花桥的家，开车回上海，30+ km，没走高速，向文坐在我边上压车。
 
 ![](https://mednoter.com/media/files/2020/2020-08-08_15-15-02.jpg)
 
@@ -231,7 +232,7 @@ B: badminton
 - week35 ✔️ 和爸妈爷爷奶奶聊天，得知爷爷最近脾气不好。
 - week36 ✔️ 和爸妈爷爷奶奶聊天。
 - week37 ✔️ 爸爸最近迷上了打篮球，给他买了双球鞋，买了个水杯。
-- week38
+- week38 ✔️ 妈妈生病，10月份自己单独回家一趟。
 - week39
 - week40 
 - week41 
@@ -257,7 +258,64 @@ B: badminton
 - Nov.
 - Dec.
 
-### 3.教沐沐英文
+### [增补] 帮沐沐认识真理 [重中之重]
+
+李燕的提醒，根基的建造比学业更重要，因为果效会持续一生。敬畏耶和华是智慧的开端。
+
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+
+
+### [增补] 教沐沐服务别人
+
+通过服务别人，帮助他认识到别人对他的付出并不是理所当然的，要以感恩的心对待。落实到每天的日常：
+
+- 全家人用餐结束后，沐沐负责收拾碗筷到洗碗机；
+- 每周六与周日的早晨，沐沐负责准备早饭；
+- 沐沐周日买西瓜到教会。
+- 沐沐每周日分棒棒糖给他最好的两个朋友，并鼓励她们保持安静。
+
+每周复盘
+
+- week30 ✔️ 鼓励沐沐给爸爸妈妈买早餐（4岁10个月，第一次）！教沐沐不要空口说爱，爱要带出行为。
+- week31 ✔️ 沐沐周六给爸妈买早餐，晚上给家里买鸡蛋
+- week32 no progress
+- week33 ✔️ 沐沐平日饭后收拾餐具，周日早晨给爸妈买豆浆，周日买西瓜，中午分享西瓜。
+- week34 ✔️ 沐沐时收拾碗筷，周日给爸妈买早餐
+- week35 ✔️ 周日和我一起给全家人煎鸡蛋
+- week36 🔴 这周我很烦，谁都不想服务，更别提教沐沐服务别人。
+- week37 ✔️ 周日和沐沐一起买早饭，煎鸡蛋给刘小坤。
+- week38 ✔️ 周日给妈妈买早饭
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+
+### 教沐沐英文
 
 有没有什么办法可以让全家人的英文水平都提高上去？（出国旅游除外）  
 一， 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min   
@@ -269,7 +327,103 @@ B: badminton
 - week35 学习叽里呱啦, youtube kids，沐沐对叽里呱啦没那么反感了 ✔️
 - week36 学习叽里呱啦 ✔️
 - week37 学习叽里呱啦（刘小坤的音标的发音有点问题，要不还是我来教英文吧，重新分工一下） ✔️
-- week38 /w/ /r/ 
+- week38 ✔️ /w/ /r/ /æ/ /t/，沐沐比较喜欢洪恩英语，买了1年会员先试试。每天早晨花10分钟一起和沐沐复习数学
+- week39 
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+### 探索：教沐沐识字
+
+- week5 ✔️ 干，湿，有害垃圾，猪爷爷，潜水艇，狗爷爷
+- week10 ✔️ 沐沐对故事/绘画/英文的领悟力极高，要加大这方面的时间投入
+- week16 ✔️ 下载软件洪恩识字，沐沐非常喜欢边玩边学，每天玩半个小时，认识4-6个字。
+- week19 ✔️ 通过洪恩识字，沐沐已经认识几十个字了。
+- week23 ✔️ 后面的字越来越复杂，沐沐学习汉字开始吃力起来。
+- week24 ✔️ 开始教沐沐用笔写字。沐沐已经认识 195 个汉字了，yeah! 马上突破200了。 
+- week25 ✔️ 突破 200 个汉字了，yeah!
+- week26 ✔️ 开始学洪恩识字 200-600 汉字包
+- week27 ✔️ 字越来越难，速度开始放慢了。
+- week28 ✔️ 洪恩识字持续学习中
+- week29 ✔️ 洪恩识字持续学习中
+- week30 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
+- week31 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
+- week32 ✔️ 沐沐开始了暑假生活，每天早晨起床后学习1个小时汉字
+- week33 ✔️ 洪恩识字后面字越来越难，经常忘字，混字，自信心变差。新字学习暂停一个月(至2020-09-11)，巩固过去学过的字。
+- week34 ✔️ 继续巩固复习错字和难字
+- week35 ✔️ 继续巩固复习错字和难字，现在做测试，有一半的字还是会出错，整个九月份不要学新字了，继续复习 （2020.8.10 -2020.9.30）。
+- week36 ✔️ 每天早晨起床后花半小时复习错字和难字。现在复习时错字控制在2个以内了。
+- week37 ✔️ 学习 抱/抓/拥/扔，每天早晨花10分钟一起和沐沐复习昨天学过的汉字
+- week38 ✔️ 学习 寒/冷/温/暖，每天早晨花10分钟一起和沐沐复习昨天学过的汉字
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+
+### [增补] 教沐沐数学
+
+- week27 ✔️ 开始学习洪恩数学中的 1-5，大小，高矮
+- week28 ✔️ 开始学习洪恩数学几何图形
+- week29 ✔️ 洪恩数学学习中，但是我不知道进度。
+- week30 ✔️ 洪恩数学学习中，但是我不知道进度。
+- week31 ✔️ 洪恩数学开头的比较简单，并不需要催他，进行的很顺利。
+- week32 ✔️ 沐沐自己在学，我不知道进度。
+- week33 ✔️ 沐沐自己在学，我不知道进度
+- week34 ✔️ 沐沐自己在学，我不知道进度
+- week35 ✔️ 学完相邻数！后面的章节越来越难，估计进度会变慢。
+- week36 ✔️ 学习单数/双数，复习相邻数。
+- week37 ✔️ 分类计数 / 5以内拆解 / 5以内减法
+- week38 ✔️ 5以内加减法，每天早晨花10分钟一起和沐沐复习数学
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+### [增补?] 锻炼沐沐的表达能力
+
+背景：老师告诉我沐沐在学校太安静了，希望家长想办法锻炼一下他的表达，话多一点。
+
+表达能力太宽泛了，不如细化一下：
+- 如果妈妈/奶奶做的饭菜好吃，肯定赞赏。
+- 如果不开心了，清楚无误的告诉别人自己的感受。
+- 每周问一个同学喜欢吃的食物，喜欢的小动物，喜欢的地方
+- 告诉 Priscilla，很喜欢去她家。这是每周最开心的一件天。
+
+每周复盘
+
+- week37 ✔️ 让沐沐问一下自己的好朋友喜欢吃什么食物，讨厌什么食物 \| 邀请他们来家里做客 \| （没问出结果来，下周让沐沐接着问）
+- week38 🔴 故意让朋友叫错沐沐的名字，让沐沐纠正别人
 - week39
 - week40 
 - week41 
@@ -293,143 +447,18 @@ B: badminton
 
 - week35 ✔️ 这周六刚好要帮小组照顾小孩，葡萄和颜言来我家。
 
-### 6.探索：教沐沐识字
 
-- week5 ✔️ 干，湿，有害垃圾，猪爷爷，潜水艇，狗爷爷
-- week10 ✔️ 沐沐对故事/绘画/英文的领悟力极高，要加大这方面的时间投入
-- week16 ✔️ 下载软件洪恩识字，沐沐非常喜欢边玩边学，每天玩半个小时，认识4-6个字。
-- week19 ✔️ 通过洪恩识字，沐沐已经认识几十个字了。
-- week23 ✔️ 后面的字越来越复杂，沐沐学习汉字开始吃力起来。
-- week24 ✔️ 开始教沐沐用笔写字。沐沐已经认识 195 个汉字了，yeah! 马上突破200了。 
-- week25 ✔️ 突破 200 个汉字了，yeah!
-- week26 ✔️ 开始学洪恩识字 200-600 汉字包
-- week27 ✔️ 字越来越难，速度开始放慢了。
-- week28 ✔️ 洪恩识字持续学习中
-- week29 ✔️ 洪恩识字持续学习中
-- week30 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
-- week31 ✔️ 每天早晨花10分钟一起和沐沐复习昨天学过的汉字
-- week32 ✔️ 沐沐开始了暑假生活，每天早晨起床后学习1个小时汉字
-- week33 ✔️ 洪恩识字后面字越来越难，经常忘字，混字，自信心变差。新字学习暂停一个月(至2020-09-11)，巩固过去学过的字。
-- week34 ✔️ 继续巩固复习错字和难字
-- week35 ✔️ 继续巩固复习错字和难字，现在做测试，有一半的字还是会出错，整个九月份不要学新字了，继续复习 （2020.8.10 -2020.9.30）。
-- week36 ✔️ 每天早晨起床后花半小时复习错字和难字。现在复习时错字控制在2个以内了。
-- week37 ✔️学习拥/抱/抓/扔
-- week38
-- week39
-- week40 
-- week41 
-- week42 
-- week43 
-- week44 
-- week45 
-- week46 
-- week47
-- week48
-- week49
-- week50 
-- week51 
-- week52 
-
-
-### 7. [增补] 教沐沐数学
-
-- week27 ✔️ 开始学习洪恩数学中的 1-5，大小，高矮
-- week28 ✔️ 开始学习洪恩数学几何图形
-- week29 ✔️ 洪恩数学学习中，但是我不知道进度。
-- week30 ✔️ 洪恩数学学习中，但是我不知道进度。
-- week31 ✔️ 洪恩数学开头的比较简单，并不需要催他，进行的很顺利。
-- week32 ✔️ 沐沐自己在学，我不知道进度。
-- week33 ✔️ 沐沐自己在学，我不知道进度
-- week34 ✔️ 沐沐自己在学，我不知道进度
-- week35 ✔️ 学完相邻数！后面的章节越来越难，估计进度会变慢。
-- week36 ✔️ 学习单数/双数，复习相邻数。
-- week37 ✔️ 分类计数 / 5以内拆解 / 5以内减法
-- week38
-- week39
-- week40 
-- week41 
-- week42 
-- week43 
-- week44 
-- week45 
-- week46 
-- week47
-- week48
-- week49
-- week50 
-- week51 
-- week52 
-
-### 8. [增补] 教沐沐服务别人
-
-通过服务别人，帮助他认识到别人对他的付出并不是理所当然的，要以感恩的心对待。落实到每天的日常：
-
-- 全家人用餐结束后，沐沐负责收拾碗筷到洗碗机；
-- 每周六与周日的早晨，沐沐负责准备早饭；
-- 沐沐周日买西瓜到教会。
-- 沐沐每周日分棒棒糖给他最好的两个朋友，并鼓励她们保持安静。
-
-每周复盘
-
-- week30 ✔️ 鼓励沐沐给爸爸妈妈买早餐（4岁10个月，第一次）！教沐沐不要空口说爱，爱要带出行为。
-- week31 ✔️ 沐沐周六给爸妈买早餐，晚上给家里买鸡蛋
-- week32 no progress
-- week33 ✔️ 沐沐平日饭后收拾餐具，周日早晨给爸妈买豆浆，周日买西瓜，中午分享西瓜。
-- week34 ✔️ 沐沐时收拾碗筷，周日给爸妈买早餐
-- week35 ✔️ 周日和我一起给全家人煎鸡蛋
-- week36 🔴 这周我很烦，谁都不想服务，更别提教沐沐服务别人。
-- week37 ✔️ 周日和沐沐一起买早饭，煎鸡蛋给刘小坤。
-- week38
-- week39
-- week40 
-- week41 
-- week42 
-- week43 
-- week44 
-- week45 
-- week46 
-- week47
-- week48
-- week49
-- week50 
-- week51 
-- week52 
-
-### [增补?] 教沐沐锻炼一下表达能力
-
-背景：老师告诉我沐沐在学校太安静了，想办法锻炼一下他的表达，话多一点。
-
-- week37 ✔️ 让沐沐问一下自己的好朋友喜欢吃什么食物，讨厌什么食物 \| 邀请他们来家里做客 \| （没问出结果来，下周让沐沐接着问）
-- week38 故意让朋友叫错沐沐的名字，让沐沐纠正别人
-- week39
-- week40 
-- week41 
-- week42 
-- week43 
-- week44 
-- week45 
-- week46 
-- week47
-- week48
-- week49
-- week50 
-- week51 
-- week52 
-
-
-
-
-
-### 9. [增补？] 每半年带全家人出去旅游一次
+### 9. [增补] 每半年带全家人出去旅游一次
 
 - week26 周四-周六：关关/吴琼/若郎/向文/刘小坤/吕小荣 去莫干山旅游。
 
-### 10. ~~探索: 教沐沐打字 (他不感兴趣)~~
+### 10. ~~[Tentative]: 教沐沐打字 (他不感兴趣)~~
 
 ### 11 其他
 
 - week35 尝试使用沙漏 ⏳ 培养沐沐的时间概念，在规定的时间内起床/穿衣服。
-- week36 沙漏效果非常明显，沐沐起床非常迅速了。
+- week36 沙漏效果非常明显，沐沐对时间越来越有概念了。起床非常迅速。
+- week38 夫妻确立一些育儿原则，避免因此吵架
 
 
 ---
@@ -475,7 +504,7 @@ B: badminton
 - week35 ✔️ Talk with Customer (hosted by Vincent)
 - week36 🔴 一点进度都没有
 - week37 🔴 一点进度都没有
-- week38
+- week38 had meeting with Jaya / Aaron / Janina
 - week39
 - week40 
 - week41 
@@ -537,7 +566,7 @@ B: badminton
 - week35 ADP V2 / 花了一上午写招聘帖
 - week36 把 CircleCI 测试时间从25分钟降到6分钟，解决了一个非常棘手的 flaky test。
 - week37 Read the document of E-Verify
-- week38
+- week38 Read the document of E-Verify / Play their API.
 - week39
 - week40 
 - week41 
@@ -590,7 +619,7 @@ B: badminton
 - week35 ✔️ Udemy Section 21: VPC - CIDR 做程序员7年了，我居然连 IP 地址/子网掩码都不懂，羞愧。
 - week36 ✔️ IP address / Mask / Network ID / Host ID / Subnetting
 - week37 ✔️ Udemy Section 21: CIDR / VLSM / FLSM / NAT / Private IP ranges
-- week38 Routing Table
+- week38 🔴 Routing Table 这周没太花时间在 aws 上
 - week39
 - week40 
 - week41 
@@ -640,8 +669,8 @@ B: badminton
 - week34 🔴 no progress
 - week35 🔴 no progress
 - week36 🔴 no progress
-- week37
-- week38
+- week37 🔴 no progress
+- week38 🔴 no progress （下一年开始学前端，认真的）
 - week39
 - week40 
 - week41 
@@ -786,7 +815,7 @@ B: badminton
 	- 上海 40% 学生上不了高中，初中毕业后直接进入中专，且不允许复读。
 	- 一年级的英文/语文非常难。
 	- 要让沐沐坚持每天学习，日拱一卒，不要把全部的压力都集中在人生的一个阶段，太累了。
-- Sept. ✔️ 2020-09-12 去坤叔家玩，看完一下他妈妈。
+- Sept. ✔️ 2020-09-12 去坤叔家玩，看望他妈妈。
 - Oct.
 - Nov.
 - Dec.
@@ -829,7 +858,7 @@ B: badminton
 	- 送小娟姐姐和姐夫 《子女心，父母情》(WIP)
 
 4. 其他
-	- 送若郎《成功，目标与动机》《欲罢不能》
+	- 送若郎《成功，目标与动机》《欲罢不能》✔️
 	- 送 Derek 量化交易的书籍。不过我不赞成普通人去做量化交易，警惕乌尔冈湖效应。✔️
 	- 送琳琳姑姑圣经 ✔️
 	- 送冯阿姨的儿子《欲罢不能》✔️
@@ -840,7 +869,7 @@ B: badminton
 已经设定好日历了，到时候按计划讨论。
 
 - ✔️ 2020-07-10: 2020年小组计划，第一次沟通
-- 2020-09-18: 第三季度沟通 (WIP)
+- ✔️ 2020-09-18: 第三季度沟通
 - 2020-12-25: 第四季度沟通
 
 
@@ -857,8 +886,8 @@ B: badminton
 
 - week35 ✔️ 
 - week36 🔴 这周很烦，什么人也不想见，就想自己独处一会。
-- week37
-- week38
+- week37 🔴 no progress
+- week38 ✔️ 祷告会挪到了周三，因为大家周日晚上没时间。
 - week39
 - week40 
 - week41 
