--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -458,7 +458,7 @@ B: badminton
 
 - week35 尝试使用沙漏 ⏳ 培养沐沐的时间概念，在规定的时间内起床/穿衣服。
 - week36 沙漏效果非常明显，沐沐对时间越来越有概念了。起床非常迅速。
-- week38 夫妻确立一些育儿原则，避免因此吵架
+- week38 确立一些[教育原则](https://mednoter.com/rules-to-shepherding-the-heart-of-child.html)，避免因教育理念不同而吵架。
 
 
 ---
@@ -737,7 +737,7 @@ B: badminton
 	- June. 🔴 no progress
 	- July. 《教小朋友学习的一点心得》《请求与命令》✔️
 	- Aug. 《沐沐的2020成长日记》《如果能给年轻时的自己一点钱，你会给多少？》 《使用 Rails generator 提高开发效率》✔️
-	- Sept.
+	- Sept. 《我和妻子教育孩子的约定》
 	- Oct.
 	- Nov.
 	- Dec.
