--- a/_drafts/2020-12-01-plan-for-2021.md
+++ b/_drafts/2020-12-01-plan-for-2021.md
@@ -1,7 +1,7 @@
 ---
 title: "2021 Plan"
 layout: post
-guid: NcUa8B3nOX7b
+guid: 0wemJ2kWfYJg
 date: 2020-12-01 00:00:00
 coffee:
 tags:
@@ -11,9 +11,11 @@ tags:
 
 
 
-开始学习前端
-
 2020年，把 aws 折腾熟了，不再折腾devops了，开始折腾前端。
+
+把焦点放到架构，业务上，不要在后端继续花费太多时间了。
+
+也不要再雕琢一些细节了。
 
 
 
