--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -24,7 +24,7 @@ tags:
 - 《软弱之道》✔️
 - 《英国复兴领袖传》✔️
 - 《宗教情感》第一遍 ✔️
-- 《宗教情感》第二遍 (WIP)
+- 《宗教情感》第二遍 ✔️
 
 听不同讲道人的讲道
 
@@ -76,9 +76,9 @@ tags:
 - week36 ✔️《宗教情感》1111100 Pray 1111100
 - week37 ✔️《宗教情感》1111101 Pray 1111101
 - week38 ✔️《宗教情感》第三遍读完了 1111101  Pray 1111101 周五和刘小坤谈育儿到深夜，周六实在无法早起床了，所以没有读经和祷告。
-- week39
-- week40
-- week41
+- week39 ✔️《诗篇》1111111 Pray 1111111 又翻了翻《宗教情感》，时候未到时，文字枯燥，经历一些事后，一下开始明白。
+- week40《诗篇》10????? Pray 11????? 国庆节，忘记复盘了
+- week41(WIP) 《诗篇》 1101101 Pray 1101101
 - week42
 - week43
 - week44
@@ -141,9 +141,9 @@ tags:
 - week36 🔴 就跑了一次
 - week37 ✔️ 锻炼: R0R000B \|  早睡早起: 1011111 \|  站立办公2小时: 1111111 \| 颈椎推拿: 0000100
 - week38 ✔️ 锻炼: R00000R \|  早睡早起: 1011101 \|  站立办公2小时: 111111 \| 颈椎推拿: 0100000
-- week39 锻炼: \|  早睡早起: \|  站立办公2小时: \| 颈椎推拿:
-- week40 
-- week41 
+- week39 🔴 锻炼: 000R000 \|  早睡 0000010 \| 早起: 1111111 \|  站立办公2小时: 1111111 \| 颈椎推拿: 0000000 买了个颈椎荣泰按摩仪，试试效果。
+- week40 锻炼 1000000 \|  早睡 00????? \| 早起 1111111 \|  站立办公2小时 11????? \| 颈椎推拿 0000000  \| 在极客时间买了一个跑步教程，学学看。 00
+- week41(WIP) 🔴 锻炼 00R00B \|  早睡 00000 \| 早起 010010 \|  站立办公2小时 000111 \| 颈椎推拿 000011 \| 跑步教材学习 000000  (哎，我晚上23点睡觉早晨7点起，与22点睡觉6点起床有什么区别呢？不要再熬夜了）
 - week42 
 - week43 
 - week44 
@@ -190,7 +190,15 @@ B: badminton
 - week30 ✔️ 周二下午练科目三 \| 周五请假全天模拟科目三 \| 周日科目三过了！
 - week31 🔴 no progress
 - week32 ✔️ 周六科目四考试 \| 拿到驾照, yeah！
-- week38 ✔️ 周六从吴琼昆山花桥的家，开车回上海，30+ km，没走高速，向文坐在我边上压车。
+- week38 ✔️ 周六从吴琼昆山花桥的家，开车回上海，30+ km，没走高速，向文坐在我边上指导。几次急刹车，吓死他了。（2020-10-06 现在回想起来，发现还是后视镜和反光镜没用好，这才是急刹的元凶）
+- week41 ✔️ 周二带着刘小坤和沐沐去滴水湖，来回 150 km。以下是这次开车的几点收获。
+	- 高架左2车道最安全。左1是超车道，右1经常有汇入，都不安全。
+	- 城市道路左2车道最安全，左1是超车道，经常变为左转车道；右1经常变为右转车道，直行时会导致频繁变道。
+	- 练习了真实的倒车入库。
+	- 看得懂百度地图的导航。
+	- 上海南站左拐到柳州路的车道在最右边！
+	- 还是不太会使用后视镜/反光镜来判断车距 TODO [ ]
+	- 环形岛不太会过。TODO [ ]
 
 ![](https://mednoter.com/media/files/2020/2020-08-08_15-15-02.jpg)
 
@@ -214,7 +222,7 @@ B: badminton
 
 - Quarter 1 ✔️
 - Quarter 2 🔴 回老家会影响随申码，沐沐就无法上学了，暂时不敢回家
-- Quarter 3
+- Quarter 3 10.23-10.25 回老家
 - Quarter 4
 
 ### [增补] 每周给爸妈&爷爷奶奶打个电话
@@ -233,9 +241,9 @@ B: badminton
 - week36 ✔️ 和爸妈爷爷奶奶聊天。
 - week37 ✔️ 爸爸最近迷上了打篮球，给他买了双球鞋，买了个水杯。
 - week38 ✔️ 妈妈生病，10月份自己单独回家一趟。
-- week39
-- week40 
-- week41 
+- week39 ✔️ 妈妈开始透析了，肾脏已经不行了。持续跟进，希望她真的悔改，不要再做挂名基督徒了。
+- week40 ✔️ 和奶奶聊了聊天，她和爷爷单独住在一座房子里挺开心的。如果住在一起，有婆媳矛盾，反而不舒服。
+- week41(WIP) 
 - week42 
 - week43 
 - week44 
@@ -253,18 +261,18 @@ B: badminton
 - June. ✔️ 2020-07-02 把莫干山的照片打印出来寄回去了。
 - July. 🔴
 - Aug. ✔️
-- Sept.
+- Sept. 🔴
 - Oct.
 - Nov.
 - Dec.
 
-### [增补] 帮沐沐认识真理 [重中之重]
+### [增补] 教沐沐圣经故事/原则 [重中之重]
 
-李燕的提醒，根基的建造比学业更重要，因为果效会持续一生。敬畏耶和华是智慧的开端。
+李燕提醒：根基的建造比学业更重要，因为果效会持续一生。敬畏耶和华是智慧的开端。
 
-- week39
-- week40 
-- week41 
+- week39 ✔️ 1101011 \| 买了报佳音上一些不错的绘本
+- week40 ???????
+- week41(WIP) ?10011 
 - week42 
 - week43 
 - week44 
@@ -287,6 +295,7 @@ B: badminton
 - 每周六与周日的早晨，沐沐负责准备早饭；
 - 沐沐周日买西瓜到教会。
 - 沐沐每周日分棒棒糖给他最好的两个朋友，并鼓励她们保持安静。
+- 沐沐负责倒垃圾
 
 每周复盘
 
@@ -299,9 +308,9 @@ B: badminton
 - week36 🔴 这周我很烦，谁都不想服务，更别提教沐沐服务别人。
 - week37 ✔️ 周日和沐沐一起买早饭，煎鸡蛋给刘小坤。
 - week38 ✔️ 周日给妈妈买早饭
-- week39
-- week40 
-- week41 
+- week39 ✔️ 分享糖果给他的朋友 \| 邀请小朋友来家里。
+- week40 ？
+- week41(WIP) 和刘小坤/沐沐协商，沐沐负责倒垃圾。我给他买了个警示灯，晚上可以让车子注意到他。
 - week42 
 - week43 
 - week44 
@@ -322,15 +331,15 @@ B: badminton
 二， 英语的暑期夏令营  
 三，[增补] 在家里说英文？说什么内容呢？
 
-- week29-31 7月份参加 Jill 的暑期夏令营 ✔️
-- week34 学习叽里呱啦, youtube kids ✔️
-- week35 学习叽里呱啦, youtube kids，沐沐对叽里呱啦没那么反感了 ✔️
-- week36 学习叽里呱啦 ✔️
+- week29-31 ✔️ 7月份参加 Jill 的暑期夏令营 
+- week34 ✔️ 学习叽里呱啦, youtube kids 
+- week35 ✔️ 学习叽里呱啦, youtube kids，沐沐对叽里呱啦没那么反感了 
+- week36 ✔️ 学习叽里呱啦 
 - week37 学习叽里呱啦（刘小坤的音标的发音有点问题，要不还是我来教英文吧，重新分工一下） ✔️
-- week38 ✔️ /w/ /r/ /æ/ /t/，沐沐比较喜欢洪恩英语，买了1年会员先试试。每天早晨花10分钟一起和沐沐复习数学
-- week39 
-- week40 
-- week41 
+- week38 ✔️ /w/ /r/ /æ/ /t/，沐沐比较喜欢洪恩英语，买了1年会员先试试。每天早晨花10分钟一起和沐沐复习英文
+- week39 ✔️ 每天早晨复习英文 1111001 \| 这一周学习的新内容太少了，以后放学后的时间让他学新内容吧。
+- week40 ✔️ 每天早晨复习英文 \| 给沐沐报了一个外教课，他的同学在我家里上课，比较省心。
+- week41(WIP) 每天早晨复习英文 111111
 - week42 
 - week43 
 - week44 
@@ -365,9 +374,9 @@ B: badminton
 - week36 ✔️ 每天早晨起床后花半小时复习错字和难字。现在复习时错字控制在2个以内了。
 - week37 ✔️ 学习 抱/抓/拥/扔，每天早晨花10分钟一起和沐沐复习昨天学过的汉字
 - week38 ✔️ 学习 寒/冷/温/暖，每天早晨花10分钟一起和沐沐复习昨天学过的汉字
-- week39
-- week40 
-- week41 
+- week39 ✔️ 早晨复习汉字 1111111 \| 新汉字 热
+- week40 ✔️ 早晨复习汉字（国庆节也是要求他 7 点起床，他已经越来越习惯了）
+- week41(WIP) ????01 (周五他学习吊儿郎当，丈打一次）
 - week42 
 - week43 
 - week44 
@@ -395,9 +404,9 @@ B: badminton
 - week36 ✔️ 学习单数/双数，复习相邻数。
 - week37 ✔️ 分类计数 / 5以内拆解 / 5以内减法
 - week38 ✔️ 5以内加减法，每天早晨花10分钟一起和沐沐复习数学
-- week39
-- week40 
-- week41 
+- week39 ✔️ 每天早晨花10分钟一起和沐沐复习数学 1111111 \| 学习5以内减法 / 梯形
+- week40 🔴 No progress
+- week41(WIP) 
 - week42 
 - week43 
 - week44 
@@ -419,14 +428,15 @@ B: badminton
 - 如果不开心了，清楚无误的告诉别人自己的感受。
 - 每周问一个同学喜欢吃的食物，喜欢的小动物，喜欢的地方
 - 告诉 Priscilla，很喜欢去她家。这是每周最开心的一件天。
+- 一周带沐沐出去2晚上，去馨逸公寓玩。
 
 每周复盘
 
 - week37 ✔️ 让沐沐问一下自己的好朋友喜欢吃什么食物，讨厌什么食物 \| 邀请他们来家里做客 \| （没问出结果来，下周让沐沐接着问）
-- week38 🔴 故意让朋友叫错沐沐的名字，让沐沐纠正别人
-- week39
-- week40 
-- week41 
+- week38 🔴 
+- week39 ✔️ 邀请核桃/板栗/悠悠来家里玩
+- week40 周一送沐沐上学，老师说要降低学业的时间的投入，多带沐沐出去玩一玩，沐沐在学校很乖，但是很安静，也不举手发言。 \| 沐沐在外面玩时，歇斯底里了一次，并攻击另外一个大人和我。要查查资料，教他认识自己的情绪 TODO [ ] \| 周六和皓天一起去卖玻璃水
+- week41(WIP) 周三带沐沐去油管艺术中心卖魔术甩棒，赚了16块钱。
 - week42 
 - week43 
 - week44 
@@ -439,18 +449,18 @@ B: badminton
 - week51 
 - week52 
 
-### 4.探索: 教沐沐编程
-
-（或许可以先从逻辑开始）
-
 ### 5.探索: 邀请沐沐的好朋友来家里做客
 
 - week35 ✔️ 这周六刚好要帮小组照顾小孩，葡萄和颜言来我家。
 
+### 4.~~探索: 教沐沐编程~~
+
+~~（或许可以先从逻辑开始）~~
 
 ### 9. [增补] 每半年带全家人出去旅游一次
 
 - week26 周四-周六：关关/吴琼/若郎/向文/刘小坤/吕小荣 去莫干山旅游。
+- week40 and week41 10.2 青西郊野公园 \| 10.3 去大叔家 \|  10.6 去滴水湖
 
 ### 10. ~~[Tentative]: 教沐沐打字 (他不感兴趣)~~
 
@@ -459,6 +469,7 @@ B: badminton
 - week35 尝试使用沙漏 ⏳ 培养沐沐的时间概念，在规定的时间内起床/穿衣服。
 - week36 沙漏效果非常明显，沐沐对时间越来越有概念了。起床非常迅速。
 - week38 确立一些[教育原则](https://mednoter.com/rules-to-shepherding-the-heart-of-child.html)，避免因教育理念不同而吵架。
+- week40 当时崔迪明介绍沙漏给我时，没太当回事。没想到沙漏真的可以让小朋友感知到时间。沐沐几乎不赖床了。再次警戒自己要谦卑，多听，不要自以为是，刚愎自用。
 
 
 ---
@@ -504,10 +515,10 @@ B: badminton
 - week35 ✔️ Talk with Customer (hosted by Vincent)
 - week36 🔴 一点进度都没有
 - week37 🔴 一点进度都没有
-- week38 had meeting with Jaya / Aaron / Janina
-- week39
-- week40 
-- week41 
+- week38 ✔️ had meeting with Jaya / Aaron / Janina
+- week39 ✔️ meeting with Janina +2 / HIREtech 
+- week40 on vacation
+- week41(WIP) on vacation.
 - week42 
 - week43 
 - week44 
@@ -567,9 +578,9 @@ B: badminton
 - week36 把 CircleCI 测试时间从25分钟降到6分钟，解决了一个非常棘手的 flaky test。
 - week37 Read the document of E-Verify
 - week38 Read the document of E-Verify / Play their API.
-- week39
-- week40 
-- week41 
+- week39 HIREtech / SAML SSO
+- week40 on vacation
+- week41(WIP) on vacation
 - week42 
 - week43 
 - week44 
@@ -620,9 +631,9 @@ B: badminton
 - week36 ✔️ IP address / Mask / Network ID / Host ID / Subnetting
 - week37 ✔️ Udemy Section 21: CIDR / VLSM / FLSM / NAT / Private IP ranges
 - week38 🔴 Routing Table 这周没太花时间在 aws 上
-- week39
-- week40 
-- week41 
+- week39  PrivateLink / Egress Internet Gateway / VPC peering / Transmit Hub  VPC 太难了，已经卡了2周了，这周开始走不求甚解。
+- week40 ✔️ VPC: Network ACLs
+- week41(WIP) ✔️ VPC endpoints: interface endpoint, gateway endpoints
 - week42 
 - week43 
 - week44 
@@ -671,9 +682,9 @@ B: badminton
 - week36 🔴 no progress
 - week37 🔴 no progress
 - week38 🔴 no progress （下一年开始学前端，认真的）
-- week39
-- week40 
-- week41 
+- week39 🔴 no progress
+- week40 🔴 expected no progress
+- week41(WIP) 🔴 expected no progress
 - week42 
 - week43 
 - week44 
@@ -708,62 +719,61 @@ B: badminton
 (2020-08-27 update: 放弃这个烂目标，增补一个简单的目标—— 早起！六点起床读经祷告！）
 
 
-### 5.业余爱好探索
+### 5.业余爱好
 
-- 组织 Ruby 上海地区的线下聚会
-	- week37 组织一次，并且申请了 Jetbrains 的兑换码作为奖品。
+#### 组织 Ruby 上海地区的线下聚会
 
-- 参与到开源项目 TiDB 数据库中
-	- 学习 TiDB 的开源文化和组织形式
-	- 参加 Meetup
-	- 加入 TiDB Working Group (optional)
-- 一个月写一篇公众号文章，熟悉一下微信公众号可以做什么。
-	- Jan 《远程办公：如何提高自己的自制力》✔️
-		- 学会开白名单
-		- 被 CSDN/51job/开智/进退学说转载
-		- 无意蹭了热点远程办公。
-	- 2020-02-11 《远程办公：如何边工作，边带孩子？》✔️
-		- 学会设置"所有人都可以留言"
-		- 打赏
-		- 流量主
-		- 商品推广
-	- 2020-02-29《远程办公：如何招聘有自驱力的员工？》✔️
-		- 找准定位 soho / programming/ remote worker
-	- 2020-03-07《教孩子管理金钱》✔️
-	- 2020-03-13 《吕小荣的股票交易原则》✔️
-		- 文章名字起的不好，自己又不是啥投资名人，who care 
-	- Apr. 🔴 no progress
-	- May. 2020-05-16《教小朋友识字》✔️
-	- June. 🔴 no progress
-	- July. 《教小朋友学习的一点心得》《请求与命令》✔️
-	- Aug. 《沐沐的2020成长日记》《如果能给年轻时的自己一点钱，你会给多少？》 《使用 Rails generator 提高开发效率》✔️
-	- Sept. 《我和妻子教育孩子的约定》
-	- Oct.
-	- Nov.
-	- Dec.
+- week37 组织一次，并且申请了 Jetbrains 的兑换码作为奖品。
 
-- 欧阳志平邀请的公开课：Anki
+#### 参与到开源项目 TiDB 数据库中。
 
-- 用 Python 写个 PubMed 小网站，练习 Python。
+学习 TiDB 的开源文化和组织形式 / 参加 Meetup 加入 TiDB Working Group (optional)
 
-- 学一下 Anki 的源码，尝试提交代码（尝试搭建一个 Anki 中文论坛？）
+#### 一个月写一篇公众号文章，熟悉一下微信公众号可以做什么。
 
-- 糖尿病食谱小助手
+✔️ Jan 《远程办公：如何提高自己的自制力》 学会开白名单 / 被 CSDN/51job/开智/进退学说转载 /无意蹭了热点远程办公。
 
-- 小朋友打疫苗日历提醒小助手
+✔️ 2020-02-11 《远程办公：如何边工作，边带孩子？》学会设置"所有人都可以留言" / 打赏 / 流量主 / 商品推广
 
-- 微信小程序：保单管家
+✔️ 2020-02-29《远程办公：如何招聘有自驱力的员工？》找准定位 soho / programming/ remote worker
+
+✔️ 2020-03-07《教孩子管理金钱》
+
+✔️ 2020-03-13 《吕小荣的股票交易原则》。文章名字起的不好，自己又不是啥投资名人，who care 
+
+✔️ 2020-05-16《教小朋友识字》
+
+✔️《教小朋友学习的一点心得》《请求与命令》
+
+✔️《沐沐的2020成长日记》《如果能给年轻时的自己一点钱，你会给多少？》 《使用 Rails generator 提高开发效率》
+
+✔️ Sept. 《我和妻子教育孩子的约定》
+
+update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个微信号，哪有这么简单。随它去吧，佛系维护。
+
+
+#### 欧阳志平邀请的公开课：Anki
+
+#### 用 Python 写个 PubMed 小网站，练习 Python。
+
+#### 学一下 Anki 的源码，尝试提交代码（尝试搭建一个 Anki 中文论坛？）
+
+#### 糖尿病食谱小助手
+
+#### 小朋友打疫苗日历提醒小助手
+
+#### 微信小程序：保单管家
 
 - ~~随机约饭助手，帮助教会内的弟兄姐妹约饭，互相认识，发送日历提醒，发送微信提醒。中国怎么没有出现过本土的优秀的教会管理软件？(在群里调研了一下，大家说缺的是时间，而不是工具，而且响应这个活动的人数寥寥，看来不是刚需）~~
 
-- 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中。
+#### 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中。
 
-- 学术造假数据库，给少灵用用看。
+#### 学术造假数据库，给少灵用用看。
 
-- Flash Card
-	- [发现一个很棒的闪卡在医学领域的落地 HLT](https://builtbyhlt.com/)
+#### Flash Card
+- [发现一个很棒的闪卡在医学领域的落地 HLT](https://builtbyhlt.com/)
 
-- 用 python 写一个微信机器人，自动处理教会的微信通知和广播
+#### 用 python 写一个微信机器人，自动处理教会的微信通知和广播
 
 
 ---
@@ -775,6 +785,12 @@ B: badminton
 不要因为有些人哭的最响，就急忙去喂他们。人是喂不饱的，唯有神的话可以喂饱。此外要帮助他们校正预期。
 
 （2020-08-17 update 再次提醒自己，不要只聚焦在哭的最响的人，而忽略整体的牧养缺口。）
+
+> 2020-10-09 update  
+> 读完《过犹不及》之后，最大的收获是，教会里有一些人用内疚感操控其他弟兄姐妹，一句“没有爱心”就让别人缴械投降，从而利用别人达到自己的诉求。以后要勇敢的对这些人说不，同时也努力保护那些心思单纯的人，不至于被这些自我为中心的人榨干。
+
+> 我服侍是因为喜欢，并不是欠你的，你也休想通过愧疚感来勒索和利用我。此外教会的服侍就是排在我的家庭和工作之后，这就是我的界限，如果有人扮可怜用内疚感来勒索我，或用属灵的大道理来侵蚀我的时间分配和资源分配，我会勇敢的说 No！
+
 
 ### 1.开放家庭
 
@@ -793,14 +809,14 @@ B: badminton
 - 2020-08-14 ✔️ 周五小组查经在我家，招待向文/小梅/黄田/小蓝/晓晓/若郎晚饭
 - 2020-08-29 ✔️ 小梅/吕小荣/冯阿姨一起带娃：颜言，葡萄，沐沐
 - 2020-09-11 ✔️ 周五小组查经在我家，招待向文/黄田/小蓝/晓晓/若郎晚饭
-- Aug.
-- Sept.
+- 2020-09-26 ✔️ 周六下午招待改改/果果/梁立波/悠悠/小梅/核桃/板栗，一起吃晚饭。
+- 2020-10-01 ✔️ 国庆节请乐意和涂涂来家里吃大闸蟹
 - Oct.
 - Nov.
 - Dec.
 
 
-### 2.在自己社交能力范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
+### 2.在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
 
 <!-- 如果他们有需要，就提供帮助。-->
 
@@ -816,7 +832,7 @@ B: badminton
 	- 一年级的英文/语文非常难。
 	- 要让沐沐坚持每天学习，日拱一卒，不要把全部的压力都集中在人生的一个阶段，太累了。
 - Sept. ✔️ 2020-09-12 去坤叔家玩，看望他妈妈。
-- Oct.
+- Oct. ✔️ 2020-10-03 去 Tim 家玩。本来要去朱家角的，但是看到皓天和沐沐玩的非常好，就放弃了原计划。
 - Nov.
 - Dec.
 	
@@ -835,7 +851,7 @@ B: badminton
 	- 2020-06-1? 和少灵闲聊学术不端的问题
 - July. 🔴 failed
 - Aug. 🔴 failed
-- Sept.
+- Sept. 🔴 failed
 - Oct.
 - Nov.
 - Dec.
@@ -851,10 +867,11 @@ B: badminton
 	- 陈哲和王黎 ✔️
 	- Snow@Workstream ✔️
 	- Demo@Workstream ✔️
+	- 滕祥功 & 康康 ✔️
 
-3. 如果朋友生小孩
-	- 送 Paul 和盈盈花王尿布，《子女心，父母情》，耳温枪
-	- 韬哥（8月底）（WIP）
+3. 送给为人父母的朋友育儿用品。
+	- 送保罗和盈盈花王尿布，《子女心，父母情》，耳温枪 ✔️
+	- 送韬哥花王尿布，《子女心，父母情》✔️
 	- 送小娟姐姐和姐夫 《子女心，父母情》(WIP)
 
 4. 其他
@@ -888,9 +905,9 @@ B: badminton
 - week36 🔴 这周很烦，什么人也不想见，就想自己独处一会。
 - week37 🔴 no progress
 - week38 ✔️ 祷告会挪到了周三，因为大家周日晚上没时间。
-- week39
-- week40 
-- week41 
+- week39 ✔️ 周三晚上吕蓝文一起祷告。
+- week40 on Vacation
+- week41(WIP) on Vacation
 - week42 
 - week43 
 - week44 
@@ -908,18 +925,18 @@ B: badminton
 
 继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。  
 
-- week5 因为疫情，无法聚会。推广使用 Zoom 来主持周日敬拜。
+- week5 因为疫情，无法聚会。推广 Zoom 来主持周日敬拜。
 - 写了一份计划书 "主动关心，彼此委身“，Nancy/Severn/李帅/小梅报名了。
-- 建立了很多微信兴趣小组，让彼此有个交集。(delegate 出去，自己并不擅长）
+- 建立了很多微信兴趣小组，让彼此有个交集。(delegate 给合适的人，自己并不擅长）
 - 鼓励坤叔把读经打卡活动扩展到整个教会层面。加入坤叔的这个活动后，我每天都在读经（以前一周最多5次），比以前增加了2天。彼此鼓励让我增长了 40% 的动力。
 
-### 9. 自己不擅长的事情，找其他人互补。
+### 9. 自己不擅长的事情，Say No, 找其他人互补。
 
 - 我不喜欢关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不被长久粘上，心里就可以接受。）
 - 我不喜欢陪伴倾听。倾听吐槽，抱怨，漫无目的的情感卸货，会很快把我吸干。反而会厌恶对方。
 - 我不喜欢组织活动。即使成功的组织了活动，也会非常精疲力尽，毫无满足感。
 - 我不喜欢参与娱乐活动，比如游戏，电影，追剧，漫画。（但是我喜欢亲近大自然的活动，爬山，徒步）
-- 我不喜欢微信和Signal 中的沟通，IM 让我的时间碎片化，无法深入思考。
+- 我不喜欢微信和 Signal 中的沟通，IM 让我的时间碎片化，无法深入思考。
 
 
 <!---### 5.和教会的 Vincent 聊聊天
